[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.33.0", features = ["rt", "macros"] }
url = { version = "2.4.1", features = ["serde"] }

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
